# ibsenvm

./: .gitignore  CMakeLists.txt
bindings/: README  example.py  main.c
include/: ivm_bytecode.h  ivm_entry.h  ivm_image.h  ivm_interrupt.h  ivm_list.h  ivm_memory.h  ivm_syscall.h  ivm_vm.h  noravm_ibsen.h  noravm_image.h  noravm_list.h  noravm_macho.h  noravm_output.h  noravm_vm.h
include/ibsen/: image.h  list.h  macho.h  section.h  segment.h  vm.h
include/noravm/: bytecode.h  entry.h  interrupt.h  registers.h  segment.h  state.h
linker/: main.c
python_bindings/: README  main.c
src/: .image.c.swp  elf.c  image.c  list.c  macho.c  main.c  noravm.c  vm.c
src/linux/: elf.c
src/macos/: macho.c
vm/: syscall.h  vm.c
